--- a/README.me
+++ b/README.me
@@ -1,7 +1,7 @@
 # streamlit_todo_app
 Simple To Do App with CRUD functionalities
 
-[![Open in Streamlit](https://static.streamlit.io/badges/streamlit_badge_black_white.svg)](https://share.streamlit.io/paulrousset/streamlit_todo_app/app/)
+[![Open in Streamlit](https://static.streamlit.io/badges/streamlit_badge_black_white.svg)](https://paulrousset-streamlit-todo-app-app-800ixm.streamlitapp.com/)
 
 
 #### TODO Crudd App
